# whoop-lens

.github/workflows/: ci.yml
apps/api/: .gitignore  README.md  pyproject.toml  railway.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_create_shared_reports.py
apps/api/app/: logging_config.py  main.py  settings.py
apps/api/app/analysis/: insights.py  metrics.py  pipeline.py  sleep.py  strain.py  time_helpers.py  trends.py
apps/api/app/db/: cleanup.py  models.py  session.py
apps/api/app/models/: __init__.py  insight.py  report.py  share.py
apps/api/app/parsing/: csv_schema.py  errors.py  frames.py  zip_loader.py
apps/api/app/routers/: analyze.py  health.py  share.py
apps/api/tests/: conftest.py  test_models.py  test_settings.py
apps/api/tests/analysis/: test_insights.py  test_metrics.py  test_pipeline.py  test_sleep.py  test_strain.py  test_time_helpers.py  test_trends.py
apps/api/tests/db/: test_cleanup.py  test_shared_report.py
apps/api/tests/fixtures/: build_fixtures.py  test_build_fixtures.py
apps/api/tests/parsing/: test_csv_schema.py  test_frames.py  test_zip_loader.py
apps/api/tests/routers/: test_analyze.py  test_health.py  test_share.py
apps/api/tests/snapshots/: happy_report.json
apps/web/: .env.local.example  .vade-report  README.md  package.json  pnpm-lock.yaml  vitest.config.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(main)/: layout.tsx  page.tsx
apps/web/src/app/about/: page.tsx
apps/web/src/app/report/: page.tsx
apps/web/src/components/report/: Card.tsx  (+23 more)
apps/web/src/context/: ReportContext.tsx
apps/web/src/lib/: api.ts  colors.ts  dials.ts  echarts.ts  errors.ts  format.ts  types.ts  url.ts
apps/web/tests/components/: Dial.test.tsx  Footer.test.tsx  InsightCard.test.tsx  UploadError.test.tsx
apps/web/tests/lib/: api.test.ts  colors.test.ts  errors.test.ts  format.test.ts  types.test.ts  url.test.ts
docs/superpowers/: HANDOFF-frontend-midstream.md  HANDOFF.md
docs/superpowers/plans/: 2026-04-07-whoop-lens-backend.md  2026-04-07-whoop-lens-frontend.md
docs/superpowers/reviews/: 2026-04-07-retro-code-quality.md  2026-04-07-retro-spec-review.md  frontend-deferred-for-task-17.md
docs/superpowers/specs/: 2026-04-07-whoop-lens-design.md
(+19 files in other folders)
